--- a/style.css
+++ b/style.css
@@ -1,46 +1,116 @@
 body {
-    background: #ADB5BD;
+    background: #ffe52c;
+    margin: 0;
+    padding: 0.5em;
+}
+
+.padding1 {
+    padding: 0.5em;
+}
+
+.margin1 {
+    margin-top: 1em;
+    margin-bottom: 2em;
+}
+
+.padding3 {
+    padding-inline: 0.5em;
+}
+
+.margin2 {
+    margin: 0;
 }
 
 .font1 {
-    font-family:    sans-serif;
+    font-family: 'Staatliches', cursive;
     color: black;
 }
 
-.box-design1 {
-    border-color: #495057;
-    border-style: solid;
-    padding: 5px;
-    border-radius: 0px;
-    background-color: #6C757D;
-    margin-bottom: 5px;
-    min-height: 2em;
-}
-
-.center_font {
-    text-align: center;
-}
-
 .link1 {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 1em;
-    color:rgb(71, 56, 56);
-    transition: all 200ms;
+    color: #28888d;
+}
+
+.font-size1 {
+    font-size: 4em;
+}
+
+.font-size2 {
+    font-size: 2.3em;
+}
+
+.font-size3 {
+    font-size: 3.5em;
+}
+
+.font-size4 {
+    font-size: 2em;
+}
+
+.font-size5 {
+    font-size: 1.3em;
+}
+
+.hr1 {
+    background-color: #2b2e31;
+     border: none;
+      height: 0.3em;
 }
 
 .ul1 {
     list-style-type: "-   ";
-    font-family: Arial, Helvetica, sans-serif;
 }
 
-.footer_div2 {
-    position: absolute; 
-    left: 50%;
-    top: 50%; 
-    transform: 
-    translate(-50%, -50%);
-}
+@media (min-width: 500px) {
+    .project1 {
+        display: inline-flex;
+    }
 
-.hover1:hover {
-    font-size: 1.2em;
+    .project2 {
+        padding-inline: 1em;
+    }
+
+    .margin1 {
+        margin-top: 1em;
+        margin-bottom: 1em;
+    }
+
+    .margin3 {
+        margin-bottom: 2em;
+    }
+
+    .margin4 {
+        margin-top: 1em;
+        margin-bottom: 1em;
+    }
+
+    .padding2 {
+        padding-inline: 5%;
+    }
+
+    .hover1 {
+        transition: all 200ms;
+    }
+
+    .hover1:hover {
+        font-size: 1.1em;
+    }
+
+
+    /* hover for Projects */
+    .hover2 {
+        transition: all 300ms;
+    }
+
+    .hover2:hover {
+        transform: scale(106%)
+    }
+
+    .titel1 {
+        display: inline-flex;
+        width: 100%;
+        align-items: center;    }
+
+    .text-align1 {
+        text-align: center;
+    }
 }
